data/derived/comb/progs/unify/prog4317.ml.out
Characters 28-36:
  let fixpoint (f,b) = wwhile((f b, b), b);;
                              ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
